build(deps-dev): install @chakra-ui/cli from PR

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@chakra-ui/cli": "^1.6.0",
+    "@chakra-ui/cli": "0.0.0-pr-2021111510277",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
